# cs50x-harvard

./: .gitignore  CMakeLists.txt  README.md
practice/week_1/: debug.c  prime.c
practice/week_1/debug/: debug.c
practice/week_1/half/: half.c
practice/week_1/prime/: prime.c
practice/week_2/: password.c
practice/week_2/hours/: hours.c
practice/week_2/no-vowels/: no-vowels.c
practice/week_2/password/: password.c
practice/week_3/atoi/: atoi.c
practice/week_3/max/: max.c
practice/week_3/snackbar/: snackbar.c
practice/week_3/temps/: temps.c
practice/week_4/bottomup/: bmp.h  bottomup.c
practice/week_4/license/: license.c
practice/week_5/trie/: trie.c
practice/week_6/bank/: bank.py
practice/week_6/figlet/: figlet.py
practice/week_6/jar/: jar.py
practice/week_6/seven-day-average/: seven-day-average.py
practice/week_6/taqueria/: taqueria.py
practice/week_7/favorites/: favorites.db  favorites.sql
practice/week_7/prophecy/: prophecy.py  roster.db  schema.sql
practice/week_9/helloflask/: app.py
problem-set-1/mario-more/: mario.c
problem-set-1/me/: hello.c
problem-sets/problem-set-01/cash/: cash.c
problem-sets/problem-set-01/credit/: credit.c
problem-sets/problem-set-01/mario-more/: mario.c
problem-sets/problem-set-01/me/: hello.c  hello_2.c
problem-sets/problem-set-01/world/: hello-1.c
problem-sets/problem-set-02/caesar/: caesar.c
problem-sets/problem-set-02/readability/: readability.c
problem-sets/problem-set-02/scrabble/: scrabble.c
problem-sets/problem-set-02/substitution/: substitution.c
(+61 files in other folders)
